--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -31,6 +31,7 @@
     letter-spacing: 2px;
     padding-right: 40px;
     padding-left: 40px;
+    white-space: nowrap; /**prevents line breaks**/
 }
 
 .link:hover {
